@@ -1,5 +1,7 @@
 package a404_notfound.sourceappwater.model;
 
+import android.util.SparseArray;
+
 import java.util.HashMap;
 import java.util.Map;
 
@@ -10,7 +12,7 @@ import java.util.Map;
  */
 
 public class ReportsHolder {
-    private static HashMap<Integer, Report> holder = new HashMap<>();
+    private static final SparseArray<Report> holder = new SparseArray<>();
     private static int i = 0;
 
     /**
@@ -19,7 +21,7 @@ public class ReportsHolder {
      * @param report the report to add the database
      */
     public static void addReport(Report report) {
-        Integer id = new Integer(i);
+        Integer id = Integer.valueOf(i);
         holder.put(id, report);
         i++;
     }
@@ -41,8 +43,8 @@ public class ReportsHolder {
     public static String getHolder() {
 
         String list = "";
-        for (Map.Entry<Integer, Report> entry : holder.entrySet()) {
-            list = list + entry.getValue()
+        for (int i = 0; i < holder.size(); i++) {
+            list = list + holder.valueAt(i)
                     + "\n";
         }
         return list;
